experiments/proxy-wasm/env/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: routes
            virtual_hosts:
            - name: services
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: static
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: "filter"
                root_id: "my_root_id"
                configuration:
                  "@type": "type.googleapis.com/google.protobuf.StringValue"
                  value: |
                    // My JavaScript filter
                    class MyHttpFilter extends HttpContext {
                      onHttpResponseHeaders() {
                        this.setResponseHeader("x-generated-by", "proxy-wasm");

                        return ACTION.continue;
                      }
                    }

                    set_http_context(MyHttpFilter);
                vm_config:
                  runtime: "envoy.wasm.runtime.v8"
                  vm_id: "VM"
                  code:
                    local:
                      filename: "/etc/lib/qjs-filter.wasm"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: static
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: static
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: static
                port_value: 8080
